fix: fix overflow issue in services

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body, .container {
 }
 
 header {
-    height: 95px;
+    height: 94px;
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
 }
@@ -161,7 +161,7 @@ section.slider {
 }
 
 section.services {
-    height: 498px;
+    height: 500px;
     background-color: #f2f2f2;
     border-bottom: 6px solid #ffffff;
 }
@@ -192,9 +192,9 @@ section.services {
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
+    min-height: 208px;
     margin-top: 44px;
     margin-right: 1px;
-    min-height: 208px;
 }
 
 .services .services__items .services__item {
@@ -204,7 +204,7 @@ section.services {
 }
 
 .services .services__items .services__item:nth-child(4), .services .services__items .services__item:nth-child(5), .services .services__items .services__item:nth-child(6) {
-    margin-top: 29px;
+    margin-top: 35px;
 }
 
 .services .services__items .services__item.image {
@@ -228,8 +228,8 @@ section.services {
 .services .services__items .services__item-column {
     display: flex;
     flex-direction: column;
-    margin-left: 22px;
     width: 220px;
+    margin-left: 21px;
 }
 
 .services .services__items .services__item-column .header {
@@ -240,11 +240,13 @@ section.services {
 }
 
 .services .services__items .services__item-column .description {
+    height: 58px;
     margin-top: 10px;
     font-size: 12px;
     line-height: 22px;
     font-weight: 400;
     letter-spacing: -0.1px;
+    overflow: hidden;
 }
 
 section.portfolio {
@@ -282,9 +284,6 @@ section.portfolio {
 
 .portfolio .portfolio__tag:hover {
     cursor: pointer;
-}
-
-.portfolio .portfolio__tag:focus {
     border: 1px solid #c5c5c5;
     color: #dedede;
 }
@@ -365,18 +364,19 @@ section.about {
 }
 
 .about .about__persons .about__person .header {
-    margin-top: 20px;
+    margin-top: 18px;
     font-size: 18px;
     letter-spacing: -0.1px;
     white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .about .about__persons .about__person .description {
     margin-top: 10px;
     font-size: 12px;
-    line-height: 20px;
-    letter-spacing: -0.1px;
+    line-height: 22px;
+    letter-spacing: 0.1px;
 }
 
 .media {
@@ -508,7 +508,7 @@ section.quote {
     background-color: #ab443f;
 }
 
-.quote .quote__block form input::placeholder, .quote .quote__block form textarea::placeholder{
+.quote .quote__block form input::placeholder, .quote .quote__block form textarea::placeholder {
     color: #f48c8f;
     font-size: 12px;
     font-weight: 400;
@@ -540,14 +540,13 @@ section.quote {
 }
 
 .quote .quote__block .quote__contacts .description.contacts {
-    margin-top: 8px;
+    margin-top: 9px;
     font-size: 12px;
     line-height: 22px;
-    letter-spacing: 0px;
 }
 
 .quote .quote__block .quote__contacts ul {
-    margin-top: 28px;
+    margin-top: 26px;
     list-style-type: none;
 }
 
